--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "supabase": "^2.30.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
